--- a/index-template.html
+++ b/index-template.html
@@ -67,7 +67,7 @@
 	    <div  class="container" id="tosdr-content" role="main">
                 <section id="intro">
                     <p>私たちはユーザの権利を守る <a href="about.html" title="私たちについてさらに学ぶ">イニシアチブ</a>です。ウェブサイトの利用規約やプライバシー・ポリシーを、最高の<span class="label A">クラスA</span>から最悪の<span class="label C">クラスE</span>まで<a href="classification.html" title="私たちの格付けとは？">格付けし表示する</a>ことを目的としています。 本サイトは<a href="http://tosdr.org/">ToS; DR</a>の日本版です。</p>			
-                    <p>利用規約は多くの場合、<strong>読むには長すぎる</strong>ものです。しかし、その内容を理解することは重要です。皆さんのオンラインにおける権利は、利用規約次第だからです。<!--Get informed about your rights: install the browser extension for <a href="https://addons.mozilla.org/en-US/firefox/addon/terms-of-service-didnt-read/">Firefox</a>, <a href="https://chrome.google.com/webstore/detail/hjdoplcnndgiblooccencgcggcoihigg">Chrome</a>, <a href="https://addons.opera.com/extensions/details/terms-of-service-didnt-read/">Opera</a> or <a href="http://safariextension.tosdr.org/">Safari</a>.</p-->私たちの格付けが、皆さんがご自分の権利について理解する手助けになることを望んでいます。ぜひ<a href="#services">以下に挙げられたサービスのどれか</a>をクリックし、詳細をお読みください！ また、私たちのウェブブラウザアドオンをインストールすることで、格付けをブラウザから直接入手することもできます。:</p>
+                    <p>利用規約は多くの場合、<strong>読むには長すぎる</strong>ものです。しかし、その内容を理解することは重要です。皆さんのオンラインにおける権利は、利用規約次第だからです。<!--Get informed about your rights: install the browser extension for <a href="https://addons.mozilla.org/en-US/firefox/addon/terms-of-service-didnt-read/">Firefox</a>, <a href="https://chrome.google.com/webstore/detail/hjdoplcnndgiblooccencgcggcoihigg">Chrome</a>, <a href="https://addons.opera.com/extensions/details/terms-of-service-didnt-read/">Opera</a> or <a href="http://safariextension.tosdr.org/">Safari</a>.</p-->私たちの格付けが、皆さんがご自分の権利について理解する手助けになることを望んでいます。ぜひ<a href="#services">以下に挙げられたサービスのどれか</a>をクリックし、詳細をお読みください！ また、私たちのウェブブラウザアドオンをインストールすることで、格付けをブラウザから直接見ることもできます:</p>
                 </section>
                 <section id="further">
                     <p><a href="downloads.html" class="btn btn-large btn-success">ブラウザアドオンをダウンロード</a><!-- TODO alternative download link and alternative browser name addon/extension depending on browser used; otherwise just use canonical downloads.html link--></p>
@@ -157,7 +157,7 @@
                         <li class="span3"><a href="http://tosdr.org/index.html">ホーム</a>
                             <ul>
                                 <li><a href="http://tosdr.org/index.html#services">格付けされたサービス</a></li>
-                                <li><a href="http://tosdr.org/topics.html#topics">格付けされるトピック</a></li>
+                                <li><a href="http://tosdr.org/topics.html#topics">評価されるトピック</a></li>
                                 <li><a href="http://tosdr.org/downloads.html">ブラウザ拡張をダウンロード</a></li>
                             </ul>
                         </li>
@@ -188,7 +188,7 @@
 
                 <p id="credits"><strong><a href="http://tosdr-jp.5apps.com/">Terms of Service; Didn&apos;t Read</a></strong> はAza Raskinの <a href="http://azarask.in/blog/post/privacy-icons/">Privacy Icons</a>やEFFの <a href="https://tosback.org/">TOSBack</a> に刺激されて始まったプロジェクトです。EFFとは現在協力関係にあります。また、<a href="http://www.opennotice.org/">OpenNotice</a>とも関連しています。</p>
 
-                <p id="legalinfo"><strong>本サイトにある情報を、法的助言と見なすべきではありません</strong>。 本サイトで公表するのはあくまで私たちの意見であり、その内容にはいかなる保証も存在しません。また、私たちはいかなる意味においても、特定のサービスを推奨するものではありません。法的助言が必要な場合は、資格を持つ弁護士にお問い合わせください。<strong>皆さんが拘束されるのは利用規約の全文であり、本サイトを読んでも利用規約全文を読む代替には決してならないことにご留意ください。</strong> 情報開示: 寄付者とサポーターの一覧は<a href="http://tosdr.org/thanks.html">こちら</a>にあります。<a href="http://tosdr.org/legal.html">法的情報と運営者に関する情報</a>。</p>
+                <p id="legalinfo"><strong>本サイトにある情報を、法的助言と見なすべきではありません</strong>。本サイトで公表するのはあくまで私たちの意見であり、その内容にはいかなる保証も存在しません。また、私たちはいかなる意味においても、特定のサービスを推奨するものではありません。法的助言が必要な場合は、資格を持つ弁護士にお問い合わせください。<strong>皆さんが拘束されるのは利用規約の全文であり、本サイトを読んでも利用規約全文を読む代わりには決してならないことにご留意ください。</strong> 情報開示: 寄付者とサポーターの一覧は<a href="http://tosdr.org/thanks.html">こちら</a>にあります。<a href="http://tosdr.org/legal.html">法的情報と運営者に関する情報</a>。</p>
 
 
                 <p id="licensing"><a href="http://tosdr-jp.5apps.com">ToS;DR Japan</a> は自由なソフトウェア（フリーソフトウェア）であり、GNU Affero General Public License (<a href="http://www.gnu.org/licenses/agpl-3.0-standalone.html" rel="license">AGPL-3.0</a>)に従って利用が許諾されます。<a href="https://github.com/mhatta/tosdr.org/archive/master.zip">ソースコード (zip)</a>が入手可能です。<a href="https://github.com/mhatta/tosdr.org/tree/master/services"><code>services/</code></a> と <a href="https://github.com/mhatta/tosdr.org/tree/master/points"><code>points/</code></a> ディレクトリの中にある<code>.json</code>データは、クリエイティヴ・コモンズ・ライセンスの表示 - 継承 (<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>)に従って利用が許諾されます。<a href="http://glyphicons.com/glyphicons-licenses/">Glyphicons</a>によるアイコンは、 CC BY <a href="http://creativecommons.org/licenses/by/3.0/deed.en">3.0  Unported license</a>に従って利用が許諾されます。Thumbs Up と Thumbs Down のアイコンは Jan によって改変されました。</p>
